src/styles/_workspace.scss
$code-color-code: #ced9e0;
$code-color-log: #dd8c60;
$code-color-result: #ffffff;
$code-color-error: #ff4444;

.workspace {
  height: 100%;
  background-color: $cadet-color-1;
  display: flex;
  padding-top: 0.5rem;
  flex: 1 1 auto;
  flex-direction: column;

  .row {
    margin-right: 0px;
    margin-left: 0px;
  }

  .ControlBar {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-left: 0.5rem;
    margin-right: 0.5rem;
    margin-bottom: 0.6rem;
  }

  .workspace-parent {
    height: 100%;
    width: 100%;
    display: flex;
    flex: 1 1 100%;
    flex-direction: row;
    overflow: hidden;

    > div {
      height: inherit; // Fix for Firefox not autoscrolling when repl overflows
    }
  }

  .right-parent {
    display: flex;
    flex-direction: column;
    flex: 1 1;
    height: 100%;
    padding-bottom: 0.6rem;
  }

  .left-parent {
    display: flex;
    flex-direction: row;
    height: 100%;
    padding-bottom: 0.6rem;
  }

  .editor-divider {
    flex: initial;
  }

  .Editor {
    display: flex;
    flex-direction: column;
    height: 100%;
    margin: 0 0.6rem 0.6rem 0.6rem;
    padding-bottom: 0.6rem;
    padding-left: 0.6rem;

    .editor-react-ace {
      flex: 1;
      height: 100%;

      #brace-editor {
        height: 100%;
      }
    }
  }

  .MCQChooser {
    flex: 1 1;
    margin: 0 0.5rem 0 0.5rem;
    overflow: hidden;
    .mcq-content-parent {
      height: 100%;
      overflow: auto;
    }
    .mcq-options-parent {
      margin-bottom: 20px;
    }
    .mcq-option {
      // use of !important to override a 'not' selector by BluePrint
      background-color: $cadet-color-3 !important;
      padding: 20px;
    }
    .mcq-task-parent {
      margin-bottom: 20px;
      .pt-card {
        background-color: $cadet-color-3;
      }
    }
    .pt-card {
      background-color: $cadet-color-2;
    }
    .Text {
      word-break: break-word;
      word-wrap: break-word;
    }
  }

  .resize-side-content {
    display: flex;
    flex-direction: column;

    .side-content-divider {
      height: 0.6rem;
      flex: initial;
    }

    .side-content {
      flex: 1 1 auto;
      height: 100%;
      text-align: justify;
      overflow-y: auto;

      .pt-card {
        display: flex;
        flex-direction: column;
        background-color: $cadet-color-2;
        color: $code-color-result;
        height: 100%;
        padding: 0.4rem 0.6rem 0.4rem 0.6rem;
        margin: 0 0.5rem 0 0;

        .side-content-text {
          height: 100%;
          /* word-wrap and word-break are added to make text wrap. */
          word-wrap: break-word;
          word-break: break-word;
        }
      }
    }
  }

  .resize-editor {
    display: flex;
    flex-direction: row;

    .Editor {
      flex: 1 1 auto;
      margin: 0 0.5rem 0 0.5rem;
      padding: 0;
    }
  }

  .side-content-header {
    display: flex;
    padding-bottom: 0.2rem;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
  }

  hr {
    margin: 0 0 0.5rem 0;
  }

  .Repl {
    display: flex;
    flex: 1 1;
    flex-direction: column;

    .repl-output-parent {
      flex: 1 1;
      overflow-y: auto;
      overflow-x: visible;
    }

    .pt-card {
      background-color: $cadet-color-2;
      padding: 0.4rem 0.6rem 0.4rem 0.6rem;
      margin: 0 0.5rem 0.5rem 0;

      pre {
        background-color: transparent;
        box-shadow: none;
        color: inherit;
        padding: 0px;
        margin: 0px;
        /* white-space, word-wrap and word-break 
         * are specified to allow all output to wrap.
         */
        white-space: pre-wrap;
        word-wrap: break-word;
        word-break: break-word;
      }

      .codeOutput {
        color: $code-color-code;
      }

      .logOutput {
        color: $code-color-log;
      }

      .resultOutput {
        color: $code-color-result;
      }

      .errorOutput {
        color: $code-color-error;
      }
    }

    /* flush to align with editor bottom */
    .repl-input-parent {
      padding: 0;
      margin-bottom: 0rem;
    }

    .repl-react-ace {
      margin: 0.4rem 0.6rem 0.4rem 0.6rem;
    }
  }

  .react-ace {
    background-color: $cadet-color-2;
    border-radius: 3px;
    .ace_gutter {
      background: $cadet-color-3;
      color: rgb(128, 145, 160);
    }
  }
}

.Popover-share {
  .pt-popover-arrow-fill {
    fill: $cadet-color-4;
  }

  .pt-popover-content {
    background: $cadet-color-4;
    display: flex;
    padding: 0.4rem 0.4rem 0.4rem 0.8rem;

    input {
      width: 25rem;
      margin-right: 0.58em;
      &:focus {
        outline: none;
      }
    }
  }
}

/* otherwise, a thick outline will show on click due to react-hotkeys */
.workspace:focus {
  outline: 0;
}

